--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -97,7 +97,7 @@
     <model-viewer 
         id="viewer"
         src="models/test.glb" 
-        environment-image="textures/studio_small_03_1k.hdr" 
+        environment-image="textures/studio_small_03_1k.jpg" 
         exposure="1.2" 
         shadow-intensity="1.5" 
         shadow-softness="0.8"
@@ -168,4 +168,5 @@
     </script>
 
 </body>
+
 </html>
