--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -91,6 +91,7 @@
     <div class="gallery">
         <div class="thumb active" onclick="loadModel('ampoule.glb', this)">Ampoule</div>
         <div class="thumb" onclick="loadModel('test.glb', this)">Cube</div>
+        <div class="thumb" onclick="loadModel('Oura.glb', this)">Oura</div>
         </div>
 
     <script>
@@ -112,3 +113,4 @@
 
 </body>
 </html>
+
