--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -90,7 +90,7 @@
 
     <div class="gallery">
         <div class="thumb active" onclick="loadModel('ampoule.glb', this)">Ampoule</div>
-        <div class="thumb" onclick="loadModel('test.glb', this)">Cube</div>
+        <div class="thumb" onclick="loadModel('test.glb', this)">Sample</div>
         <div class="thumb" onclick="loadModel('Oura.glb', this)">Oura</div>
         </div>
 
@@ -113,4 +113,5 @@
 
 </body>
 </html>
+
 
