--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -76,7 +76,7 @@
     <model-viewer 
         id="viewer"
         src="models/ampoule.glb" 
-        environment-image="textures/studio_small_03_1k.jpg" 
+        environment-image="textures/balcony_1K.jpg" 
         exposure="1.5" 
         shadow-intensity="1.5" 
         shadow-softness="1"
@@ -113,5 +113,6 @@
 
 </body>
 </html>
+
 
 
