--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -91,7 +91,7 @@
     <div class="gallery">
         <div class="thumb" onclick="loadModel('test.glb', this)">Sample</div>
         <div class="thumb" onclick="loadModel('Oura.glb', this)">Oura</div>
-        <div class="thumb" onclick="loadModel('Vial.glb', this)">Vial</div>
+        <div class="thumb" onclick="loadModel('vial.glb', this)">Vial</div>
         </div>
 
     <script>
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
