--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -89,9 +89,9 @@
     </model-viewer>
 
     <div class="gallery">
-        <div class="thumb" onclick="loadModel('test.glb', this)">Sample</div>
-        <div class="thumb" onclick="loadModel('Oura.glb', this)">Oura</div>
+        <div class="thumb" onclick="loadModel('Oura.glb', this)">Toothbrush</div>
         <div class="thumb" onclick="loadModel('vial.glb', this)">Vial</div>
+        <div class="thumb" onclick="loadModel('Wipes.glb', this)">Wipes</div>
         </div>
 
     <script>
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
