--- a/amazon-ar/index.html
+++ b/amazon-ar/index.html
@@ -75,7 +75,7 @@
 
     <model-viewer 
         id="viewer"
-        src="models/ampoule.glb" 
+        src="models/Oura.glb" 
         environment-image="textures/balcony_1K.jpg" 
         exposure="1.5" 
         shadow-intensity="1.5" 
@@ -113,6 +113,7 @@
 
 </body>
 </html>
+
 
 
 
